--- a/Frontend/src/app/dashboard/components/pages/unassigned-assets/unassigned-assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/unassigned-assets/unassigned-assets.component.html
@@ -1,44 +1,34 @@
 <section class="TableContainer">
-    <div class="card">
-      <h2 class="centre-text">Unassigned Asset List</h2>
-      <div class="row centre-text">
-        <div class="col-3">
-          <div class="buttonMarj">
-            <button type="submit" class="btn btn-success border border-secondary shadow rounded" (click)="assignAsset()">
-              <i class="bi bi-pc-display"> Assign asset</i>
-            </button>
-            <button type="reset" class="btn btn-secondary border border-secondary shadow rounded" (click)="unSelectReadio()">
-              <i class="bi bi-bootstrap-reboot"></i>
-            </button>
-          </div>
-        </div>
-        <div class="col">
-          <label for="search"></label>
-          <input
-            id="search"
-            type="text"
-            class="form-control shadow rounded"
-            [(ngModel)]="searchText"
-            placeholder="   🔍Start searching......"
-          />
-        </div>
-        
-        <div class="col-2 buttonMarj">
-          <button
-            [routerLink]="['/dashboard']"
-            routerLinkActive="router-link-active"
-            class="btn btn-warning border border-warning shadow rounded"
-          >
-            <i class="bi bi-arrow-return-left"></i>
+  <div class="card">
+    <h2 class="centre-text">Unassigned Asset List</h2>
+    <div class="row centre-text">
+      <div class="col-3">
+        <div class="buttonMarj">
+          <button type="submit" class="btn btn-success border border-secondary shadow rounded" (click)="assignAsset()">
+            <i class="bi bi-pc-display"> Assign asset</i>
+          </button>
+          <button type="reset" class="btn btn-secondary border border-secondary shadow rounded"
+            (click)="unSelectReadio()">
+            <i class="bi bi-bootstrap-reboot"></i>
           </button>
         </div>
       </div>
-  
-      <br />
-      <table
-        class="table table-hover tableScroll mb-4"
-        *ngIf="unassugnedAssets | filter : searchText as result"
-      >
+      <div class="col">
+        <label for="search"></label>
+        <input id="search" type="text" class="form-control shadow rounded" [(ngModel)]="searchText"
+          placeholder="   🔍Start searching......" />
+      </div>
+
+      <div class="col-2 buttonMarj">
+        <button [routerLink]="['/dashboard']" routerLinkActive="router-link-active"
+          class="btn btn-warning border border-warning shadow rounded">
+          <i class="bi bi-arrow-return-left"></i>
+        </button>
+      </div>
+    </div>
+
+    <br />
+    <table class="table table-hover tableScroll mb-4" *ngIf="unassugnedAssets | filter : searchText as result">
       <thead *ngIf="result.length != 0">
         <th>Sr No.</th>
         <th>Type</th>
@@ -58,15 +48,8 @@
       <tbody>
         <tr *ngFor="let item of result; let i = index">
           <td>
-            <input
-              class="form-check-input"
-              type="radio"
-              name="a"
-              value="{{ item.id }}"
-              id="{{ i }}"
-              [(ngModel)]="readioSelected"
-              style="cursor: pointer"
-            />
+            <input class="form-check-input" type="radio" name="a" value="{{ item.id }}" id="{{ i }}"
+              [(ngModel)]="readioSelected" style="cursor: pointer" />
             <label class="custom-control-label" for="{{ i }}">
               &nbsp;{{ i + 1 }}
             </label>
@@ -74,74 +57,73 @@
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.tyape
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.name
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.proprietary
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.configuration
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.serviceTag
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.model
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.hostName
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.oem
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.expiryDate | date : "yyyy-MM-dd"
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.owner
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.remarks
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.ram
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.vendorId | vendorsName : vendors
-            }}</label>
+              }}</label>
           </td>
         </tr>
         <tr *ngIf="result.length === 0">
           <td colspan="15">!!-- No Record Found --!!</td>
         </tr>
       </tbody>
-      </table>
-    </div>
-  </section>
-  
+    </table>
+  </div>
+</section>
