--- a/Frontend/src/app/core/components/layouts/landing/landing.component.html
+++ b/Frontend/src/app/core/components/layouts/landing/landing.component.html
@@ -1,13 +1,14 @@
 <section class="landing">
-    <div class="dark-overlay">
-      <div class="landing-inner">
-        <h1 class="x-large">Asset Management</h1>
-        <p class="lead">
-          Manage Your Assets and Complete Your Work Quickly
-        </p>
-        <div class="buttons">
-          <a [routerLink]="['/dashboard']" routerLinkActive="router-link-active"   class="btn btn-primary">Go To Dashboard</a>
-        </div>
+  <div class="dark-overlay">
+    <div class="landing-inner">
+      <h1 class="x-large">Asset Management</h1>
+      <p class="lead">
+        Manage Your Assets and Complete Your Work Quickly
+      </p>
+      <div class="buttons">
+        <a [routerLink]="['/dashboard']" routerLinkActive="router-link-active" class="btn btn-primary">Go To
+          Dashboard</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
