--- a/Frontend/src/app/dashboard/components/Forms/submit-asset/submit-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/submit-asset/submit-asset.component.html
@@ -7,38 +7,28 @@
           <button type="submit" class="btn btn-danger  border border-secondary shadow rounded" (click)="submitAsset()">
             <i class="bi bi-person-down"> Submit asset</i>
           </button>
-          <button type="reset" class="btn btn-secondary  border border-secondary shadow rounded" (click)="unSelectReadio()">
+          <button type="reset" class="btn btn-secondary  border border-secondary shadow rounded"
+            (click)="unSelectReadio()">
             <i class="bi bi-bootstrap-reboot"></i>
           </button>
         </div>
       </div>
       <div class="col">
         <label for="search"></label>
-        <input
-          id="search"
-          type="text"
-          class="form-control  border shadow rounded"
-          [(ngModel)]="searchText"
-          placeholder="   🔍Start searching......"
-        />
+        <input id="search" type="text" class="form-control  border shadow rounded" [(ngModel)]="searchText"
+          placeholder="   🔍Start searching......" />
       </div>
-      
+
       <div class="col-2 buttonMarj">
-        <button
-          [routerLink]="['/dashboard']"
-          routerLinkActive="router-link-active"
-          class="btn btn-warning  border border-warning shadow rounded"
-        >
+        <button [routerLink]="['/dashboard']" routerLinkActive="router-link-active"
+          class="btn btn-warning  border border-warning shadow rounded">
           <i class="bi bi-arrow-return-left"></i>
         </button>
       </div>
     </div>
 
     <br />
-    <table
-      class="table tableScroll mb-4"
-      *ngIf="assignedAssets | filter : searchText as result"
-    >
+    <table class="table tableScroll mb-4" *ngIf="assignedAssets | filter : searchText as result">
       <thead *ngIf="result.length != 0">
         <th>Sr No.</th>
         <th>Employee Id</th>
@@ -56,15 +46,8 @@
       <tbody>
         <tr *ngFor="let item of result; let i = index">
           <td>
-            <input
-              class="form-check-input"
-              type="radio"
-              name="a"
-              value="{{ item.id }}"
-              id="{{ i }}"
-              [(ngModel)]="readioSelected"
-              style="cursor: pointer"
-            />
+            <input class="form-check-input" type="radio" name="a" value="{{ item.id }}" id="{{ i }}"
+              [(ngModel)]="readioSelected" style="cursor: pointer" />
             <label class="custom-control-label" for="{{ i }}">
               &nbsp;{{ i + 1 }}
             </label>
@@ -72,57 +55,57 @@
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.id | assetTransaction : assetTransaction
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.tyape
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.name
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.proprietary
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.serviceTag
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.model
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.expiryDate | date : "yyyy-MM-dd"
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.owner
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.remarks
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.ram
-            }}</label>
+              }}</label>
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
               item.vendorId | vendorsName : vendors
-            }}</label>
+              }}</label>
           </td>
         </tr>
         <tr *ngIf="result.length === 0">
